# django-poetry-docker

./: .dockerignore  .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
djangopoetry/: asgi.py  settings.py  urls.py  wsgi.py
